# rust-game-engine

./: .gitignore  Cargo.toml
res/models/: container.mtl  cottage.mtl  landscape.mtl  suzanne_test.mtl
res/shaders/: font.fs  font.vs
src/: camera.rs  main.rs  shader.rs
src/graphics/: mesh.rs  mod.rs  model.rs  node_3d.rs  player_character.rs  scene.rs  skybox.rs  static_body_3d.rs  true_type_font.rs  vertex.rs
src/math/: aabb_bouding_box.rs  mod.rs  rotation.rs
src/opengl/: element_buffer_object.rs  mod.rs  texture.rs  vertex_array_object.rs  vertex_buffer_object.rs
